syntax = "proto3";

package project;

service ProjectService {
  rpc CreateProject(Project) returns (Response) {}
  rpc CreateTicket(Ticket) returns (Response) {}

  rpc GetProjects(GetRequest) returns (Response) {}
  rpc GetProject(GetRequest) returns (Response) {}

  rpc GetTickets(GetRequest) returns (Response) {}

//  Project UD
  // Ticket UD
}

message Project {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  repeated Ticket tickets = 4;
}

message Ticket {
  string title = 1;
  string description = 2;
  string creationDate = 3;
  string author = 4;
  string assigned = 5;
  uint64 projectId = 6;
}

message GetRequest {
  int64 projectId = 1;
}

message Response {
  bool created = 1;
  Project project = 2;

  repeated Project projects = 3;

  repeated Ticket tickets = 4;
}